tests/transpiler/x/java/var_assignment.java
// Generated by Mochi transpiler v0.10.31 on 2025-07-19 10:39:22 UTC
public class Main {
    public static void main(String[] args) {
        var x = 1;
        x = 2;
        System.out.println(x);
    }
}
